@@ -1,5 +1,13 @@
 2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[scheme int] Use ‘zero?’ more.
+
+	* basic.scm (test:fnumber-and-friends): Use ‘zero?’.
+	(test:asynchronous-retrieval): Likewise.
+	* testing.scm (test-report): Likewise.
+
+2011-09-27  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[v int] Simplify expression in basic.scm.
 
 	* basic.scm (test:protocol-version): Don't bother
